# -*- mode: org; -*-
#+STARTUP: showall

* Development

  - Add =desktop-registry-remove-desktop= command to remove desktops you
    no longer (want to) use.

  - Add =desktop-registry-current-desktop= function to get the name of
    the currently loaded desktop.

  - Add =desktop-registry-rename-desktop= command to rename a desktop.

  - Specify prompts for each action that wants a desktop selected.